--- a/images/client/main.scss
+++ b/images/client/main.scss
@@ -1,3 +1,17 @@
 img {
     width: 300px;
 }
+
+.media-body {
+    position: relative;
+
+    p {
+        padding-bottom: 50px;
+    }
+
+    .image-score {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+    }
+}
